Fix all integration issues and complete Phase 1 setup
- Created all missing components (ErrorBoundary, LoadingScreen, Dashboard, Settings, Achievements)
- Fixed import/export mismatches in core modules
- Configured service worker for PWA functionality
- Added proper build configuration with Vite
- Created startup scripts for easy development
- Integrated Phase 1 features (Onboarding, Audio, Haptics, AI, State Management)
- Fixed all file paths and dependencies
- Added comprehensive documentation and quick start guide

The project is now fully functional and ready to run with 'npm install && npm run dev'

Author: Chude <chude@emeke.org>

--- a/package.json
+++ b/package.json
@@ -26,11 +26,20 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.294.0"
+    "lucide-react": "^0.294.0",
+    "zustand": "^4.4.7",
+    "zundo": "^2.0.0",
+    "immer": "^10.0.3",
+    "framer-motion": "^10.16.5",
+    "react-spring": "^9.7.3",
+    "react-hot-toast": "^2.4.1",
+    "openai": "^4.20.1",
+    "idb": "^7.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.4",
     "vite": "^4.4.9",
+    "vite-plugin-pwa": "^0.17.4",
     "eslint": "^8.50.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -67,10 +76,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/sentence-builder"
+    "url": "https://github.com/chudeemeke/sentence-builder"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/sentence-builder/issues"
+    "url": "https://github.com/chudeemeke/sentence-builder/issues"
   },
-  "homepage": "https://github.com/yourusername/sentence-builder#readme"
+  "homepage": "https://github.com/chudeemeke/sentence-builder#readme"
 }
